--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
                 <li class="header-item">
                     <a class="header-link link" href="./index.html">Studio</a></li>
                 <li class="header-item">
-                    <a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+                    <a class="header-link current link" href="./portfolio.html">Portfolio</a></li>
                 <li class="header-item">
                     <a class="header-link link" href="./index.html">Contacts</a></li>
             </ul>
